purple_app/KUBE-CONFIG/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: short-app-clusterip
spec:
  type: ClusterIP
  # selector для Deployment
  selector:
    components: frontend
  ports:
  # Порт указанный в deployment (ContainerPort)
  - port: 80
    protocol: TCP
